--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
   port: 8080
+  servlet:
+    session:
+      timeout: 30m
 
 spring:
   datasource:
@@ -16,3 +19,6 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: assign_id
+
+package:
+  name: com.example
